src/tests/snapshots/molt__tests__visibility__match___const_.snap
---
source: src/tests/mod.rs
expression: "super :: super :: match_pattern(& name, stringify! (const_))"
snapshot_kind: text
---
note: Match
   ┌─ "test_data/visibility/main.rs":62:1
   │
62 │ pub const PUBLIC_CONST: i32 = 42;
   │ ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ $pattern
   │
   = $expr = 42
   = $ident = PUBLIC_CONST
   = $type_ = i32
   = $vis = pub

note: Match
   ┌─ "test_data/visibility/main.rs":63:1
   │
63 │ pub(crate) const CRATE_CONST: i32 = 42;
   │ ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ $pattern
   │
   = $expr = 42
   = $ident = CRATE_CONST
   = $type_ = i32
   = $vis = pub(crate)

note: Match
   ┌─ "test_data/visibility/main.rs":64:1
   │
64 │ pub(super) const SUPER_CONST: i32 = 42;
   │ ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ $pattern
   │
   = $expr = 42
   = $ident = SUPER_CONST
   = $type_ = i32
   = $vis = pub(super)

note: Match
   ┌─ "test_data/visibility/main.rs":65:1
   │
65 │ pub(in crate::visibility) const RESTRICTED_CONST: i32 = 42;
   │ ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ $pattern
   │
   = $expr = 42
   = $ident = RESTRICTED_CONST
   = $type_ = i32
   = $vis = pub(in crate::visibility)

note: Match
   ┌─ "test_data/visibility/main.rs":66:1
   │
66 │ const PRIVATE_CONST: i32 = 42;
   │ ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ $pattern
   │
   = $expr = 42
   = $ident = PRIVATE_CONST
   = $type_ = i32
   = $vis =
