src/tests/snapshots/molt__tests__visibility__match___field.snap
---
source: src/tests/mod.rs
expression: "super :: super :: match_pattern(& name, stringify! (field))"
snapshot_kind: text
---
note: Match
   ┌─ "test_data/visibility/main.rs":29:1
   │  
29 │ ╭ pub struct PublicStruct {
30 │ │     pub public_field: i32,
31 │ │     pub(crate) crate_field: i32,
32 │ │     pub(super) super_field: i32,
33 │ │     pub(in crate::visibility) restricted_field: i32,
34 │ │     private_field: i32,
35 │ │ }
   │ ╰─^ $pattern
   │  
   = $field_ident = public_field
   = $field_ident = crate_field
   = $field_ident = super_field
   = $field_ident = restricted_field
   = $field_ident = private_field
   = $type_ = i32
   = $type_ = i32
   = $type_ = i32
   = $type_ = i32
   = $type_ = i32
   = $vis = pub
   = $vis = pub(crate)
   = $vis = pub(super)
   = $vis = pub(in crate::visibility)
   = $vis =
