src/tests/snapshots/molt__tests__visibility__match___module.snap
---
source: src/tests/mod.rs
expression: "super :: super :: match_pattern(& name, stringify! (module))"
---
note: Match
  ┌─ "test_data/visibility/main.rs":1:1
  │  
1 │ ╭ pub mod public_module {
2 │ │ }
  │ ╰─^ $item
  │  
  = $ident = public_module
  = $vis = pub
