src/tests/snapshots/molt__tests__visibility__match___rule_mod_1.snap
---
source: src/tests/mod.rs
expression: "super :: super :: match_pattern(& name, stringify! (rule_mod_1))"
snapshot_kind: text
---
note: Match
  ┌─ "test_data/visibility/main.rs":1:1
  │  
1 │ ╭ mod private_module {
2 │ │ }
  │ ╰─^ $pat
  │  
  = $ident = private_module

note: Match
  ┌─ "test_data/visibility/main.rs":4:1
  │  
4 │ ╭ pub mod public_module {
5 │ │ }
  │ ╰─^ $pat
  │  
  = $ident = public_module
