src/tests/snapshots/molt__tests__visibility__match___rule_mod_2.snap
---
source: src/tests/mod.rs
expression: "super :: super :: match_pattern(& name, stringify! (rule_mod_2))"
snapshot_kind: text
---
note: Match
  ┌─ "test_data/visibility/main.rs":1:1
  │  
1 │ ╭ mod private_module {
2 │ │ }
  │ ╰─^ $pat
  │  
  = $ident = private_module
