src/tests/snapshots/molt__tests__visibility__match___trait_.snap
---
source: src/tests/mod.rs
expression: "super :: super :: match_pattern(& name, stringify! (trait_))"
snapshot_kind: text
---
note: Match
   ┌─ "test_data/visibility/main.rs":50:1
   │  
50 │ ╭ pub trait PublicTrait {
51 │ │ }
   │ ╰─^ $item
   │  
   = $ident = PublicTrait
   = $vis = pub

note: Match
   ┌─ "test_data/visibility/main.rs":53:1
   │  
53 │ ╭ pub(crate) trait CrateTrait {
54 │ │ }
   │ ╰─^ $item
   │  
   = $ident = CrateTrait
   = $vis = pub(crate)
